tests/baselines/reference/asyncEnum_es5.errors.txt
asyncEnum_es5.ts(1,1): error TS1042: 'async' modifier cannot be used here.


==== asyncEnum_es5.ts (1 errors) ====
    async enum E {
    ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
      Value
    }